--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "[112120 rows x 11 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,6 +304,26 @@
     "    src = cxr8_data_path / 'no_finding' / img_name\n",
     "    dst = cxr8_data_path / 'filtered' / img_name\n",
     "    shutil.copyfile(src, dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['PA', 'AP'], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['View Position'].unique()"
    ]
   },
   {
