--- a/resnet34-vae.ipynb
+++ b/resnet34-vae.ipynb
@@ -51,12 +51,6 @@
     "CLAHE_TILE = 8\n",
     "clahe = cv2.createCLAHE(clipLimit=4, tileGridSize=(CLAHE_TILE, CLAHE_TILE))\n",
     "\n",
-    "\n",
-    "# def applyClahe(tensor):\n",
-    "# print(type(tensor), tensor.size)\n",
-    "#   return clahe.apply(np.array(tensor))\n",
-    "\n",
-    "\n",
     "input_size = (1, 448, 448)\n",
     "\n",
     "if dataset_name == \"cxr8\":\n",
@@ -151,7 +145,7 @@
     "import torch.optim as optim\n",
     "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
     "\n",
-    "fig, ax = plt.subplots(2, 5, figsize=(20,8))\n",
+    "fig, ax = plt.subplots(3, 5, figsize=(20,12))\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -162,23 +156,36 @@
     "        data = data.to(device)\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        recon_batch, mu, log_var = model(data)\n",
+    "        recon_batch, mu, log_var, data_lut, data_warp = model(data)\n",
     "        recon_loss, kldiv_loss, loss = vae_loss(\n",
-    "            recon_batch, data, mu, log_var, recon_loss_metric=\"l1_loss\",  beta=0.25\n",
+    "            recon_batch, data, mu, log_var, recon_loss_metric=\"mse_loss\",  beta=0.1\n",
     "        )\n",
     "\n",
     "        if train_count % 10 == 0:\n",
-    "            orig_data = data.clone().cpu().detach().numpy()\n",
-    "            recon_data = recon_batch.cpu().detach().numpy()\n",
+    "            # data_warp, data_lut = model.stn_grid_lut(data)\n",
+    "\n",
+    "            orig_data = data.clone().cpu().detach()\n",
+    "            recon_data = recon_batch.cpu().detach()\n",
+    "\n",
+    "            data_warp = data_warp.cpu().detach()\n",
+    "            data_lut = data_lut.cpu().detach()\n",
+    "\n",
+    "            grid = F.affine_grid(data_warp, data.size(), align_corners=False)\n",
+    "            data_resampled = F.grid_sample(orig_data, grid, padding_mode=\"zeros\")\n",
+    "            data_resampled = torch.pow(data_resampled, data_lut)\n",
     "\n",
     "            # print(v.shape)\n",
     "            for n in range(5):\n",
-    "                ax[0][n].imshow(torch.movedim(torch.tensor(orig_data[n]), 0, -1), cmap='bone')\n",
-    "                ax[1][n].imshow(torch.movedim(torch.tensor(recon_data[n]), 0, -1), cmap='bone')\n",
+    "                ax[0][n].imshow(torch.squeeze(orig_data[n]), cmap='bone')\n",
+    "                ax[1][n].imshow(torch.squeeze(data_resampled[n]), cmap='bone')\n",
+    "                ax[2][n].imshow(torch.squeeze(recon_data[n]), cmap='bone')\n",
     "\n",
     "            clear_output(wait=True)\n",
     "\n",
     "            display(plt.gcf())\n",
+    "            print(f\"data_warp = {torch.squeeze(data_warp[0:5])}\")\n",
+    "            print(f\"data_lut = {torch.squeeze(data_lut[0:5])}\")\n",
+    "\n",
     "\n",
     "        loss.backward()\n",
     "        train_loss += loss.item()\n",
