--- a/resnet34-vae.ipynb
+++ b/resnet34-vae.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "KERNEL_SIZE = 11\n",
     "DIRECTIONS = 7\n",
-    "LATENT_DIM = 32  # 64\n",
+    "LATENT_DIM = 64  # 64\n",
     "show_summary = True\n",
     "\n",
     "# model = VAE((1 if dataset_name == \"cxr8\" else 3, 224, 224), latent_dim).to(device)\n",
@@ -151,7 +151,7 @@
     "import torch.optim as optim\n",
     "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
     "\n",
-    "fig, ax = plt.subplots(2, 5, figsize=(20,8))\n",
+    "fig, ax = plt.subplots(3, 5, figsize=(20,12))\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
@@ -162,19 +162,27 @@
     "        data = data.to(device)\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        recon_batch, mu, log_var = model(data)\n",
+    "        recon_batch, mu, log_var, x_after_v1, x_before_v1 = model(data)\n",
     "        recon_loss, kldiv_loss, loss = vae_loss(\n",
-    "            recon_batch, data, mu, log_var, recon_loss_metric=\"l1_loss\",  beta=0.25\n",
+    "            recon_batch, data, mu, log_var, x_after_v1, x_before_v1, recon_loss_metric=\"l1_loss\",  beta=0.1\n",
     "        )\n",
     "\n",
     "        if train_count % 10 == 0:\n",
-    "            orig_data = data.clone().cpu().detach().numpy()\n",
+    "            data = data[0:5].clone()\n",
+    "            orig_data = model.stn(data)\n",
+    "            orig_data = orig_data.cpu().detach().numpy()\n",
+    "\n",
+    "            recon_batch = recon_batch[0:5].clone()\n",
     "            recon_data = recon_batch.cpu().detach().numpy()\n",
+    "\n",
+    "            blend_data = 0.5 * orig_data + 0.5 * recon_data\n",
+    "            blend_data = np.stack([recon_data, orig_data,recon_data], axis=-1)\n",
     "\n",
     "            # print(v.shape)\n",
     "            for n in range(5):\n",
-    "                ax[0][n].imshow(torch.movedim(torch.tensor(orig_data[n]), 0, -1), cmap='bone')\n",
-    "                ax[1][n].imshow(torch.movedim(torch.tensor(recon_data[n]), 0, -1), cmap='bone')\n",
+    "                ax[0][n].imshow(np.squeeze(orig_data[n]), cmap='bone')\n",
+    "                ax[1][n].imshow(np.squeeze(blend_data[n])) # cmap='bone')\n",
+    "                ax[2][n].imshow(np.squeeze(recon_data[n]), cmap='bone')\n",
     "\n",
     "            clear_output(wait=True)\n",
     "\n",
