--- a/resnet34-vae.ipynb
+++ b/resnet34-vae.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "        recon_batch, mu, log_var, x_after_v1, x_before_v1 = model(data)\n",
     "        recon_loss, kldiv_loss, loss = vae_loss(\n",
-    "            recon_batch, data, mu, log_var, x_after_v1, x_before_v1, recon_loss_metric=\"l1_loss\",  beta=0.1\n",
+    "            recon_batch, data, mu, log_var, x_after_v1, x_before_v1, recon_loss_metric=\"binary_cross_entropy\",  beta=0.1\n",
     "        )\n",
     "\n",
     "        if train_count % 10 == 0:\n",
