attempt at herringstack pre-processor

--- a/resnet34-vae.ipynb
+++ b/resnet34-vae.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "KERNEL_SIZE = 11\n",
     "DIRECTIONS = 7\n",
-    "LATENT_DIM = 64  # 64\n",
+    "LATENT_DIM = 128  # 64\n",
     "show_summary = True\n",
     "\n",
     "# model = VAE((1 if dataset_name == \"cxr8\" else 3, 224, 224), latent_dim).to(device)\n",
@@ -162,14 +162,22 @@
     "        data = data.to(device)\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        recon_batch, mu, log_var, x_after_v1, x_before_v1 = model(data)\n",
+    "        recon_batch, mu, log_var, x_after_v1, x_after_v2, x_before_v2, x_before_v1 = model(data)\n",
+    "        # print(f\"data = {data.shape}\")\n",
+    "        # print(f\"recon_batch = {recon_batch.shape}\")\n",
+    "        # print(f\"mu = {mu.shape}\")\n",
+    "        # print(f\"log_var = {log_var.shape}\")\n",
+    "        # print(f\"x_after_v1 = {x_after_v1.shape}\")\n",
+    "        # print(f\"x_after_v2 = {x_after_v2.shape}\")\n",
+    "        # print(f\"x_before_v2 = {x_before_v2.shape}\")\n",
+    "        # print(f\"x_before_v1 = {x_before_v1.shape}\")\n",
     "        recon_loss, kldiv_loss, loss = vae_loss(\n",
-    "            recon_batch, data, mu, log_var, x_after_v1, x_before_v1, recon_loss_metric=\"binary_cross_entropy\",  beta=0.1\n",
+    "            recon_batch, data, mu, log_var, x_after_v1, x_after_v2, x_before_v2, x_before_v1, recon_loss_metric=\"l1_loss\",  beta=0.1\n",
     "        )\n",
     "\n",
     "        if train_count % 10 == 0:\n",
     "            data = data[0:5].clone()\n",
-    "            orig_data = model.stn(data)\n",
+    "            orig_data = data # model.stn(data)\n",
     "            orig_data = orig_data.cpu().detach().numpy()\n",
     "\n",
     "            recon_batch = recon_batch[0:5].clone()\n",
@@ -195,8 +203,7 @@
     "\n",
     "        print(\n",
     "            f\"Epoch [{epoch+1}/{num_epochs}], Batch: {batch_idx}, Loss: {train_loss / train_count:.6f} ({recon_loss:.6f}/{kldiv_loss:.6f})\"\n",
-    "        )\n",
-    "        "
+    "        )\n"
    ]
   },
   {
