trying to use upsampling

--- a/resnet34-vae.ipynb
+++ b/resnet34-vae.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "dataset_name = \"cxr8\"\n",
     "\n",
-    "base_data_path = Path(\"D:\\\\\") / \"data\"\n",
+    "base_data_path = Path(\"C:\\\\\") / \"data\"\n",
     "\n",
     "imagenet_data_path = (\n",
     "    base_data_path\n",
@@ -50,12 +50,6 @@
     "\n",
     "CLAHE_TILE = 8\n",
     "clahe = cv2.createCLAHE(clipLimit=4, tileGridSize=(CLAHE_TILE, CLAHE_TILE))\n",
-    "\n",
-    "\n",
-    "# def applyClahe(tensor):\n",
-    "# print(type(tensor), tensor.size)\n",
-    "#   return clahe.apply(np.array(tensor))\n",
-    "\n",
     "\n",
     "input_size = (1, 448, 448)\n",
     "\n",
