--- a/resnet34-vae.ipynb
+++ b/resnet34-vae.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=48, shuffle=True)\n",
     "print(f\"train_dataset length = {len(train_dataset)}; input_size = {input_size}\")"
    ]
   },
@@ -53,12 +53,14 @@
     "\n",
     "from vae import VAE, vae_loss\n",
     "\n",
-    "KERNEL_SIZE = 13\n",
-    "DIRECTIONS = 7\n",
-    "LATENT_DIM = 128  # 64\n",
+    "KERNEL_SIZE = 11\n",
+    "DIRECTIONS = 5\n",
+    "LATENT_DIM = 64 # 64\n",
     "\n",
     "# model = VAE((1 if dataset_name == \"cxr8\" else 3, 224, 224), latent_dim).to(device)\n",
-    "model = VAE(input_size, init_kernel_size=KERNEL_SIZE, latent_dim=LATENT_DIM)\n",
+    "model = VAE(\n",
+    "    input_size, init_kernel_size=KERNEL_SIZE, latent_dim=LATENT_DIM, use_stn=True\n",
+    ")\n",
     "print(\n",
     "    summary(\n",
     "        model,\n",
@@ -102,11 +104,11 @@
     "\n",
     "# TODO: get this from the VAE construction\n",
     "v1_weight = torch.tensor(  \n",
-    "    [1.0**4] * 8\n",
-    "    + [0.9**4] * 8\n",
-    "    + [0.8**4] * 8\n",
-    "    + [0.7**4] * 8\n",
-    "    + [0.6**4] * 8\n",
+    "    [1.0**2] * 16\n",
+    "    + [0.5**2] * 16\n",
+    "    + [0.25**2] * 16\n",
+    "    + [0.125**2] * 16\n",
+    "    + [0.06125**2] * 16\n",
     ")\n",
     "print(f\"v1_weight = {v1_weight}\")\n",
     "\n",
@@ -128,11 +130,11 @@
     "        x_recon = result_dict[\"x_recon\"]\n",
     "        # TODO: can these be passed as **params?\n",
     "        recon_loss, kldiv_loss, loss = vae_loss(\n",
-    "            x_recon, \n",
     "            x, \n",
+    "            x_recon, \n",
     "            result_dict[\"mu\"], \n",
     "            result_dict[\"log_var\"],\n",
-    "            v1_weight, \n",
+    "            v1_weight,\n",
     "            result_dict[\"x_after_v1\"], \n",
     "            result_dict[\"x_before_v1\"],\n",
     "            recon_loss_metric=\"l1_loss\",  \n",
@@ -143,7 +145,7 @@
     "            # TODO: move this to output to tensorboard\n",
     "            x = x[0:5].clone()\n",
     "\n",
-    "            x_xformed = model.stn(x)\n",
+    "            x_xformed = model.stn(x) if model.use_stn else x\n",
     "            x_xformed = x_xformed.cpu().detach().numpy()\n",
     "\n",
     "            x = x.cpu().detach().numpy()\n",
@@ -151,8 +153,7 @@
     "            x_recon = x_recon[0:5].clone()\n",
     "            x_recon = x_recon.cpu().detach().numpy()\n",
     "\n",
-    "            # blend_data = 0.5 * orig_data + 0.5 * recon_data\n",
-    "\n",
+    "            # additive blending\n",
     "            blend_data = np.stack([x_recon, x_xformed, x_recon], axis=-1)\n",
     "\n",
     "            # print(v.shape)\n",
@@ -165,17 +166,14 @@
     "\n",
     "            display(plt.gcf())\n",
     "\n",
-    "        if loss.isnan():\n",
-    "            print(\"loss.isnan()\")\n",
-    "                        \n",
     "        loss.backward()\n",
-    "        # print(f\"loss = {loss}\")\n",
+    "        # print(f\"loss = {loss}; {'nan' if loss.isnan() else ''}\")\n",
     "        \n",
     "        train_loss += loss.item()\n",
     "        train_count += 1.0\n",
     "\n",
     "        # print(list(model.parameters()))\n",
-    "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "        # torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
     "        optimizer.step()\n",
     "\n",
     "        print(\n",
@@ -216,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
