--- a/flowers.ipynb
+++ b/flowers.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "from torch import tensor\n",
     "from torch.utils.data import random_split\n",
     "from torchvision.transforms import Compose, Resize, ToTensor, InterpolationMode\n",
@@ -26,8 +27,9 @@
     "        return sample\n",
     "\n",
     "\n",
+    "path = Path(\"c:\") / \"data\" / \"flowers\"\n",
     "fds = Flowers102(\n",
-    "    \"c:\\\\data\\\\flowers\",\n",
+    "    path,\n",
     "    # split=\"train\",\n",
     "    download=True,\n",
     "    transform=Compose(\n",
@@ -37,7 +39,7 @@
     "            Resize((512, 512)),\n",
     "        ]\n",
     "    ),\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -85,10 +87,11 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "test_img = fds[0][0]\n",
     "print(test_img.shape)\n",
-    "plt.imshow(test_img[0,:,:], cmap='gray')\n",
-    "plt.imshow(test_img[1,:,:], cmap='Blues')"
+    "plt.imshow(test_img[0, :, :], cmap=\"gray\")\n",
+    "plt.imshow(test_img[1, :, :], cmap=\"Blues\")"
    ]
   },
   {
